# comet_analyzer_v3

./: CMakeLists.txt  README.md  environment.yml  spectrum.txt
docs/: algorithms.md  architecture.md  build_run.md  overview.md  testing.md
frontend/: app.js  index.html  styles.css
include/: data_loader.h  element_db.h  spectrum_analyzer.h
src/: data_loader.c  element_db.c  export_results.c  main.c  spectrum_analyzer.c
tests/: test_loader.c  test_match.c  test_peaks.c
